kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: albion-frontend
spec:
  ports:
    - name: http
      port: 80
  selector:
    app: albion-frontend
